android-ci.yml 업데이트

--- a/.github/android-ci.yml
+++ b/.github/android-ci.yml
@@ -2,9 +2,9 @@ name: Android CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -19,21 +19,27 @@ jobs:
         with:
           distribution: temurin
           java-version: 17
-          cache: gradle
 
-      - name: Set up Android SDK
+      - name: Set up Android SDK (플랫폼/빌드툴 명시)
         uses: android-actions/setup-android@v3
         with:
-          api-level: 34
-          build-tools: 35.0.0
+          packages: |
+            platforms;android-34
+            build-tools;35.0.0
+            platform-tools
+            cmdline-tools;latest
 
       - name: Make Gradle executable
         run: chmod +x ./gradlew
 
-      - name: Build Debug APK
-        run: ./gradlew --no-daemon assembleDebug
+      - name: Build Debug APK (로그 많이)
+        env:
+          JAVA_TOOL_OPTIONS: -Xmx3g
+          GRADLE_OPTS: -Dorg.gradle.jvmargs="-Xmx3g -Dfile.encoding=UTF-8"
+        run: ./gradlew --no-daemon --stacktrace assembleDebug
 
       - name: Upload APK artifact
+        if: success()
         uses: actions/upload-artifact@v4
         with:
           name: app-debug
